--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: H4X0R
 email: milkey-mouse@team-ivan.com
 description: > # this means to ignore newlines until "baseurl:"
   A game about what some people think hacking is
-baseurl: "/h4x0r/" # the subpath of your site, e.g. /blog/
+baseurl: "/h4x0r" # the subpath of your site, e.g. /blog/
 url: "http://h4x0r.team-ivan.com/" # the base hostname & protocol for your site
 twitter_username: username
 github_username: milkey-mouse
