--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: H4X0R
 email: milkey-mouse@team-ivan.com
 description: A game about what some people think hacking is
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://milkey-mouse.github.io/h4x0r" # the base hostname & protocol for your site
+baseurl: "/h4x0r/" # the subpath of your site, e.g. /blog/
+url: "http://milkey-mouse.github.io/" # the base hostname & protocol for your site
 twitter_username: username
 github_username: milkey-mouse
 
