Used AAC-LC for intro.mp4

--- a/.settings/tasks.json
+++ b/.settings/tasks.json
@@ -34,7 +34,7 @@
 {
 	"command": "tsc",
 	"isShellCommand": true,
-	"showOutput": "always",
+	"showOutput": "silent",
 	"problemMatcher": "$tsc"
 }
 
