--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.mp3 filter=lfs diff=lfs merge=lfs -text
 *.ogv filter=lfs diff=lfs merge=lfs -text
+*.webm filter=lfs diff=lfs merge=lfs -text
