--- a/.settings/tasks.json
+++ b/.settings/tasks.json
@@ -1,16 +1,8 @@
 {
+	//'npm install typescript' if it's not there
 	"version": "0.1.0",
-
-	// The command is tsc. Assumes that tsc has been installed using npm install -g typescript
 	"command": "tsc",
-
-	// The command is a shell script
 	"isShellCommand": true,
-
-	// Show the output window only if unrecognized errors occur.
 	"showOutput": "silent",
-
-	// use the standard tsc problem matcher to find compile problems
-	// in the output.
 	"problemMatcher": "$tsc"
 }
