--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@
 *.mp3 filter=lfs diff=lfs merge=lfs -text
 *.ogv filter=lfs diff=lfs merge=lfs -text
 *.webm filter=lfs diff=lfs merge=lfs -text
+*.ogg filter=lfs -crlf
